# rwr-toolbox

./: .gitignore  .npmignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  angular.json  p1.json  p2.json  package.json  pnpm-lock.yaml
.azure-pipelines/: build-validation.yml  release.yml
.github/workflows/: build-validation.yml  release.yml
docs/: CONSTRUCTION.md  STATUS.md  UI.md
slides/: README.md  slides.md
specs/001-fix-data-scanning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-game-path-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-i18n-table-changelog/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-optimize-table-column-width/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ui-layout-optimization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ui-style-optimization/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-005-tag-column/: tasks.md
specs/008-ui-and-search-refinements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-fix-windows-editor-changelog/: data-model.md  plan.md  (+4 more)
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: directories.rs  events.rs  hotkeys.rs  items.rs  lib.rs  main.rs  ping.rs  rwrmi.rs  steam_launch.rs  utils.rs  version_check.rs  weapons.rs
src-tauri/src/rwrmi/: constants.rs
(+145 files in other folders)
